<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/background_road"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_page_backgroung_theme"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/viewSupporter"
        />

    <View
        android:id="@+id/face"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/face"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewSupporter"
        />
    <View
        android:id="@+id/google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewSupporter"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/sign_in_with_fg"
        android:text="@string/or_sign_in_with"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/face"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
       />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:id="@+id/signUpBtn"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/sign_in_with_fg"
        android:background="@drawable/button_background"
         />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:id="@+id/signInBtn"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/signUpBtn"
        android:background="@drawable/signup_button_backgroung"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/text_on_signin"
        android:text="@string/text_on_singin"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/signInBtn"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="20dp"
        android:textSize="32dp"
        android:textColor="@color/white"
        android:id="@+id/textWelcome"
        android:text="@string/find_new_nfriends_nearby"
        app:layout_constraintBottom_toTopOf="@id/text_on_signin"
        />



</androidx.constraintlayout.widget.ConstraintLayout>